force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Amount__c</fullName>
    <description>The item amount</description>
    <inlineHelpText>The item amount</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>