force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__BillingScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated billing schedule</description>
    <inlineHelpText>ID of the associated billing schedule</inlineHelpText>
    <label>Billing Schedule</label>
    <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>