force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__BillingState__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingState__c</fullName>
    <description>The billing street</description>
    <inlineHelpText>The billing street</inlineHelpText>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>