force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Category__c</fullName>
    <description>The category associated with the item</description>
    <inlineHelpText>The category associated with the item</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>