force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated account location</description>
    <inlineHelpText>ID of the associated account location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>