force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__PrepaidAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PrepaidAmount__c</fullName>
    <description>The field is use to track the portion of the Invoice Line Item that was credited by one or more Wallets during the Invoice Run.</description>
    <inlineHelpText>To Track the portion of the Invoice Line Item that was credited by Wallets.</inlineHelpText>
    <label>Prepaid Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>