force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__Prorated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Prorated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the item amount is prorated</description>
    <inlineHelpText>Indicates whether the item amount is prorated</inlineHelpText>
    <label>Prorated ?</label>
    <type>Checkbox</type>
</CustomField>