force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__ShipToStreet__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToStreet__c</fullName>
    <description>The ship to street</description>
    <inlineHelpText>The ship to street</inlineHelpText>
    <label>Ship To Street</label>
    <type>TextArea</type>
</CustomField>