force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__SoldToState__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SoldToState__c</fullName>
    <description>The sold to street</description>
    <inlineHelpText>The sold to street</inlineHelpText>
    <label>Sold To State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>