force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__StartDate__c</fullName>
    <description>The item start date</description>
    <inlineHelpText>The item start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>