force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__TaxInclusive__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxInclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the fee is tax inclusive. Only applicable for taxable items.</description>
    <inlineHelpText>Indicates whether the feeis tax inclusive. Only applicable for taxable items.</inlineHelpText>
    <label>Tax Inclusive ?</label>
    <type>Checkbox</type>
</CustomField>