force-app/main/default/objects/Apttus_Billing__InvoiceLineItem__c/fields/Apttus_Billing__TransferredToERPDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TransferredToERPDate__c</fullName>
    <description>The date the item information was transferred to the ERP application</description>
    <inlineHelpText>The date the item information was transferred to the ERP application</inlineHelpText>
    <label>Transferred To ERP Date</label>
    <type>DateTime</type>
</CustomField>